# extism-plugin-demos

./: README.md
extism-foundation-rust/: Cargo.toml
extism-foundation-rust/src/: main.rs
extism-foundation-typescript/: package.json
extism-plugin-rust/: Cargo.toml
extism-plugin-rust/src/: lib.rs
extism-plugin-typescript/: package.json
