[package]
name = "extism-plugin-rust"
version = "0.1.0"
edition = "2021"

[lib]
# cargo build --release --target wasm32-unknown-unknown
# https://playground.extism.org/
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "0.3.1"
serde="1"
